--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta keywords="leonardo, quintero, developer, leonardo quintero, software development">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta keywords="leonardo, quintero, developer, software development">
 	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Dancing+Script:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/master.css">
-	<base href="/" />
+	<base href="/#" />
  	<title>Leonardo Quintero</title>
 </head>
 <body ng-app="portfolio">
@@ -28,16 +30,16 @@
 					<a href="#">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li>
-					<a href="projects">Work</a>
+					<a href="#/work">Work</a>
 				</li>
 				<li>
-					<a href="about">About</a>
+					<a href="#/about">About</a>
 				</li>
 				<li>
-					<a href="blog">Blog</a>
+					<a href="#/blog">Blog</a>
 				</li>
 				<li>
-					<a href="contact">Contact</a>
+					<a href="#/contact">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -46,13 +48,30 @@
         
 	</div> 
 	<!-- deps -->
+	<script src="bower_components/d3/d3.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<!-- app -->
 	<script src="app/app.js"></script>
+	<!-- directives -->
+	<script src="app/directives/directives.js"></script>
 	<!-- controllers -->
 	<script src="app/controllers/homeController.js"></script>
+	<script src="app/controllers/statsController.js"></script>
+	<script src="app/controllers/workController.js"></script>
+	<!-- analytics -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-68035105-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
 
 </body>
 </html>
